--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ img{
     font-size: 16px;
     border: none;
     cursor: pointer;
+    box-shadow: 0px 0px 20px 1px #f29a4cab;
 }
 /* header section */
 .logo {
@@ -227,6 +228,7 @@ nav ul li a {
 .input-part .btn {
     display: block;
     width: 100%;
+    box-shadow: none;
     border-radius: 8px;
     -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
